# GeneralUpdate

./: .gitignore  BENCHMARK.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_BODY.md  LICENSE  PLUGIN_UPGRADE.md  PROMO.md  README.md  README_ZHCN.md  README_en.md  SECURITY.md  git_push.bat
.github/: issue-11-body.md
.github/ISSUE_TEMPLATE/: config.yml  error_report.yml  feature_report.yaml  refactor_report.yaml
.github/workflows/: ci.yml  dotnet-aot-check.yaml  dotnet-ci.yaml  dotnet.yml  rust.yml
doc/: GeneralUpdate.Drivelution.md
doc/md/: GeneralUpdate.AspNetCore.md  GeneralUpdate.ClientCore.md  GeneralUpdate.Core.md  GeneralUpdate.Differential.md  GeneralUpdate.PacketTool.md  GeneralUpdate.Single.md  GeneralUpdate.Zip.md  组件简介.md
docs/: core-execution-flow.md
example/aspnet/GeneralUpdate.Service/: GeneralUpdate.Service.sln  Program.cs
example/fileserver/: fileserver.sln  readme.md
example/fileserver/fileserver/: Program.cs  Startup.cs  fileserver.csproj  fileserver.sln
example/winform/: readme.md
example/winform/TestWinForms/: Form1.Designer.cs  Form1.cs  Program.cs  TestWinForms.csproj  TestWinForms.sln
ipc/: BOWL_TEST_ENV_VAR.enc
src/: GeneralUpdate.slnx
src/GeneralUpdate.Bowl/: Bowl.cs  BowlBootstrap.cs  GeneralUpdate.Bowl.csproj
src/GeneralUpdate.Bowl/Internal/: CrashJsonContext.cs  CrashReporter.cs
src/GeneralUpdate.Bowl/Strategies/: IBowlStrategy.cs  LinuxBowlStrategy.cs
src/GeneralUpdate.Bowl/Tracer/: WindowsOutputDebugListener.cs
src/GeneralUpdate.Core/: GeneralUpdate.Core.csproj
src/GeneralUpdate.Core/Configuration/: ConfigurationMapper.cs  HubConfig.cs  OssConfiguration.cs  OssVersionRecord.cs  ProcessContract.cs  UpdateContext.cs
src/GeneralUpdate.Core/Differential/: DefaultCleanMatcher.cs
src/GeneralUpdate.Core/Event/: EventManager.cs  ProgressEventArgs.cs
src/GeneralUpdate.Core/FileSystem/: BlackDefaults.cs  BlackMatcher.cs  FileNode.cs
src/GeneralUpdate.Core/HashAlgorithms/: HashAlgorithmBase.cs  Sha256HashAlgorithm.cs
src/GeneralUpdate.Core/Hooks/: IUpdateHooks.cs
src/GeneralUpdate.Core/Hubs/: RandomRetryPolicy.cs  UpgradeHubService.cs
src/GeneralUpdate.Core/JsonContext/: FileNodesJsonContext.cs  HttpParameterJsonContext.cs  OssConfigurationJsonContext.cs  ProcessContractJsonContext.cs  PushPayloadJsonContext.cs  UpdateRequestConfigJsonContext.cs
src/GeneralUpdate.Core/Pipeline/: DiffPipeline.cs  DiffPipelineOptions.cs  IMiddleware.cs  PipelineContext.cs
src/GeneralUpdate.Core/Security/: ISslValidationPolicy.cs
src/GeneralUpdate.Core/Silent/: SilentPollOrchestrator.cs
src/GeneralUpdate.Core/Tracer/: WindowsOutputDebugListener.cs
src/GeneralUpdate.Core/Utilities/: Semver.cs
src/GeneralUpdate.Differential/: GeneralUpdate.Differential.csproj
src/GeneralUpdate.Differential/Abstractions/: BZip2CompressionProvider.cs  BrotliCompressionProvider.cs  IBinaryDiffer.cs
src/GeneralUpdate.Drivelution/: GeneralUpdate.Drivelution.csproj
src/GeneralUpdate.Extension/: GeneralUpdate.Extension.csproj
src/c#/: Directory.Build.props  GeneralUpdate.Tool.sln  GeneralUpdate.lutconfig  GeneralUpdate.sln  GeneralUpdate.slnx
src/c#/BowlTest/: BowlTests.cs  (+4 more)
src/python/: READ_ME.md  install.py
src/vela/vela-core/: .gitignore  Cargo.toml
src/vela/vela-core/crates/vela-attestation/: Cargo.toml
src/vela/vela-core/crates/vela-attestation/src/: attester.rs  identity.rs  lib.rs  pulse.rs
src/vela/vela-core/crates/vela-builder/: Cargo.toml
src/vela/vela-core/crates/vela-builder/src/: main.rs
src/vela/vela-core/crates/vela-core/: Cargo.toml
src/vela/vela-core/crates/vela-core/src/: lib.rs  orchestrator.rs
src/vela/vela-core/crates/vela-crypto/: Cargo.toml
src/vela/vela-core/crates/vela-crypto/src/: lib.rs
src/vela/vela-core/crates/vela-delta/: Cargo.toml
src/vela/vela-core/crates/vela-delta/src/: diff.rs  lib.rs  manifest.rs  patch.rs
src/vela/vela-core/crates/vela-e2e/: Cargo.toml
src/vela/vela-core/crates/vela-e2e/src/: lib.rs  suite1_watchdog_bus.rs  suite2_slot_lifecycle.rs  suite3_hub_retry.rs  suite4_pipeline.rs  suite5_error_recovery.rs  suite6_config.rs
src/vela/vela-core/crates/vela-ffi/: Cargo.toml
src/vela/vela-core/crates/vela-ffi/src/: lib.rs
src/vela/vela-core/crates/vela-flasher/: Cargo.toml
src/vela/vela-core/crates/vela-flasher/src/: direct_writer.rs  fpk_installer.rs  lib.rs
src/vela/vela-core/crates/vela-flashpack/: Cargo.toml
src/vela/vela-core/crates/vela-flashpack/src/: builder.rs  header.rs  lib.rs  reader.rs  validator.rs
src/vela/vela-core/crates/vela-hub/: Cargo.toml
src/vela/vela-core/crates/vela-hub-server/: Cargo.toml
src/vela/vela-core/crates/vela-hub-server/src/: e2e_tests.rs  main.rs  routes.rs  state.rs
src/vela/vela-core/crates/vela-hub/src/: client.rs  download.rs  lib.rs  retry.rs
src/vela/vela-core/crates/vela-lifecycle/: Cargo.toml
src/vela/vela-core/crates/vela-lifecycle/src/: engine.rs  lib.rs
src/vela/vela-core/crates/vela-pulse/: Cargo.toml
src/vela/vela-core/crates/vela-pulse/src/: lib.rs
src/vela/vela-core/crates/vela-slotmgr/: Cargo.toml
src/vela/vela-core/crates/vela-slotmgr/src/: guard.rs  lib.rs  linux.rs  manager.rs  mock.rs
src/vela/vela-core/crates/vela-watchdog/: Cargo.toml
src/vela/vela-core/crates/vela-watchdog/src/: bus.rs  lib.rs  watchdog.rs
tag/20230422/: GeneralUpdate.ClientCore.2.12.10.nupkg  GeneralUpdate.Core.4.14.20.nupkg  GeneralUpdate.Differential.1.4.2.nupkg  GeneralUpdate.Maui.OSS.1.0.0.nupkg
tests/: Directory.Packages.props
tests/BowlTest/: BowlTest.csproj  BowlTests.cs  CrashInfoTests.cs  README.md
tests/ClientCoreTest/: ClientCoreTest.csproj  README.md
tests/ClientTest/: ClientTest.csproj  Program.cs  generalupdate.manifest.json
tests/CoreTest/: CoreTest.csproj  GracefulExitTests.cs
tests/DifferentialTest/: ComprehensiveDifferentialTests.cs  DifferentialTest.csproj  DifferentialUpgradeIntegrationTests.cs
tests/DrivelutionTest/: DrivelutionTest.csproj
tests/ExtensionTest/: ExtensionTest.csproj  RefactorSecurityAndArchitectureTests.cs
tests/UpgradeTest/: Program.cs  UpgradeTest.csproj
(+1275 files in other folders)
