[workspace]
members = [
    "crates/vela-crypto",
    "crates/vela-flashpack",
    "crates/vela-attestation",
    "crates/vela-lifecycle",
    "crates/vela-slotmgr",
    "crates/vela-pulse",
    "crates/vela-hub",
    "crates/vela-watchdog",
    "crates/vela-ffi",
    "crates/vela-core",
    "crates/vela-builder",
    "crates/vela-e2e",
    "crates/vela-delta",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/GeneralLibrary/GeneralUpdate"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# Crypto
ring = "0.17"
x509-cert = "0.3.0-rc.4"
hmac = "0.12"
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# JWT
jsonwebtoken = "9"
# Archive/compression
tar = "0.4"
flate2 = "1"
# Hashing
sha2 = "0.10"
hex = "0.4"
# ECDSA / RSA traits
p256 = "0.13"
rsa = "0.9"
pkcs8 = "0.10"
# Async trait
async-trait = "0.1"
# UUID
uuid = { version = "1", features = ["v4"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Cross-platform syscalls
libc = "0.2"
# FFI binding generation (build-dependency)
csbindgen = "1"
# Testing
mockall = "0.13"
tempfile = "3"
