[package]
name = "vela-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
vela-flashpack = { path = "../vela-flashpack" }
vela-lifecycle = { path = "../vela-lifecycle" }
vela-slotmgr = { path = "../vela-slotmgr" }
vela-attestation = { path = "../vela-attestation" }
vela-pulse = { path = "../vela-pulse" }
vela-crypto = { path = "../vela-crypto" }
vela-hub = { path = "../vela-hub" }
vela-watchdog = { path = "../vela-watchdog" }

[dev-dependencies]
tempfile.workspace = true
