[package]
name = "vela-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
ring.workspace = true
x509-cert.workspace = true
sha2.workspace = true
hex.workspace = true
p256.workspace = true
rsa.workspace = true
pkcs8.workspace = true

[dev-dependencies]
tempfile.workspace = true
