[package]
name = "vela-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
vela-core = { path = "../vela-core" }
vela-watchdog = { path = "../vela-watchdog" }
vela-lifecycle = { path = "../vela-lifecycle" }
vela-slotmgr = { path = "../vela-slotmgr" }
vela-hub = { path = "../vela-hub" }
vela-attestation = { path = "../vela-attestation" }
vela-pulse = { path = "../vela-pulse" }
vela-flashpack = { path = "../vela-flashpack" }

tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
