[package]
name = "vela-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
vela-flashpack = { path = "../vela-flashpack" }
vela-lifecycle = { path = "../vela-lifecycle" }
vela-slotmgr = { path = "../vela-slotmgr" }
vela-attestation = { path = "../vela-attestation" }
vela-pulse = { path = "../vela-pulse" }
vela-crypto = { path = "../vela-crypto" }

[build-dependencies]
csbindgen.workspace = true
