[package]
name = "vela-flasher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
sha2.workspace = true
hex.workspace = true
flate2.workspace = true
tar.workspace = true
vela-flashpack = { path = "../vela-flashpack" }
vela-crypto = { path = "../vela-crypto" }

[dev-dependencies]
tempfile.workspace = true
