[package]
name = "vela-flashpack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
flate2.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
uuid.workspace = true
vela-crypto = { path = "../vela-crypto" }

[dev-dependencies]
tempfile.workspace = true
