[package]
name = "vela-hub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "fs"] }
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
vela-flashpack = { path = "../vela-flashpack" }
futures = "0.3"
hex.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
