[package]
name = "vela-slotmgr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
libc.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true
